sync cart with logged-out-cart when fetching cart
